NetBSD Problem Report #55080

From martin@aprisoft.de  Tue Mar 17 17:21:48 2020
Return-Path: <martin@aprisoft.de>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 76B881A9213
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 17 Mar 2020 17:21:48 +0000 (UTC)
Message-Id: <20200317172136.E50F75CC8D0@emmas.aprisoft.de>
Date: Tue, 17 Mar 2020 18:21:36 +0100 (CET)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: current does not boot
X-Send-Pr-Version: 3.95

>Number:         55080
>Category:       kern
>Synopsis:       current does not boot
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    ad
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Mar 17 17:25:00 +0000 2020
>Closed-Date:    Thu Jun 11 18:56:23 +0000 2020
>Last-Modified:  Thu Jun 11 18:56:23 +0000 2020
>Originator:     Martin Husemann
>Release:        NetBSD 9.99.50
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD seven-days-to-the-wolves.aprisoft.de 9.99.49 NetBSD 9.99.49 (GENERIC) #356: Mon Mar 9 10:32:52 CET 2020 martin@seven-days-to-the-wolves.aprisoft.de:/work/src/sys/arch/amd64/compile/GENERIC amd64
Architecture: x86_64
Machine: amd64
(this is an older kernel, for obvious reasons)

>Description:

Trying to boot an amd64 GENERIC kernel as of a few minutes ago stops midway
on this machine. Usual output (see full dmesg below):

[   2.8817516] uhub8 at usb8: NetBSD (0000) EHCI root hub (0000), class 9/0, rev 2.00/1.00, addr 1
[   2.9917822] ahcisata1 port 2: device present, speed: 1.5Gb/s
[   3.1118215] ahcisata1 port 0: device present, speed: 6.0Gb/s
[   3.9820640] ehci1: handing over full speed device on port 1 to ohci1
[   4.7022652] wd0 at atabus2 drive 0

The last line or sometimes two last lines do not show up with -current.
Can break into ddb, all cpus in the idle loop.

Full dmesg of old kernel:
Copyright (c) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
    2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017,
    2018, 2019, 2020 The NetBSD Foundation, Inc.  All rights reserved.
Copyright (c) 1982, 1986, 1989, 1991, 1993
    The Regents of the University of California.  All rights reserved.

NetBSD 9.99.49 (GENERIC) #356: Mon Mar  9 10:32:52 CET 2020
	martin@seven-days-to-the-wolves.aprisoft.de:/work/src/sys/arch/amd64/compile/GENERIC
total memory = 16382 MB
avail memory = 15879 MB
sysctl_createv: sysctl_locate(maxtypenum) returned 2
pool redzone disabled for 'buf4k'
pool redzone disabled for 'buf64k'
timecounter: Timecounters tick every 10.000 msec
Kernelized RAIDframe activated
running cgd selftest aes-xts-256 aes-xts-512 done
timecounter: Timecounter "i8254" frequency 1193182 Hz quality 100
System manufacturer System Product Name (System Version)
mainbus0 (root)
ACPI: RSDP 0x00000000000FBAD0 000024 (v02 ACPIAM)
ACPI: XSDT 0x00000000CFE90100 00005C (v01 030811 XSDT1042 20110308 MSFT 00000097)
ACPI: FACP 0x00000000CFE90290 0000F4 (v03 030811 FACP1042 20110308 MSFT 00000097)
Firmware Warning (ACPI): 32/64X length mismatch in FADT/Gpe0Block: 64/32 (20191213/tbfadt-642)
ACPI: DSDT 0x00000000CFE90450 00E040 (v01 A1585  A1585000 00000000 INTL 20060113)
ACPI: FACS 0x00000000CFEA8000 000040
ACPI: APIC 0x00000000CFE90390 00007C (v01 030811 APIC1042 20110308 MSFT 00000097)
ACPI: MCFG 0x00000000CFE90410 00003C (v01 030811 OEMMCFG  20110308 MSFT 00000097)
ACPI: OEMB 0x00000000CFEA8040 000072 (v01 030811 OEMB1042 20110308 MSFT 00000097)
ACPI: SRAT 0x00000000CFE9F8A0 000108 (v01 AMD    FAM_F_10 00000002 AMD  00000001)
ACPI: HPET 0x00000000CFE9F9B0 000038 (v01 030811 OEMHPET  20110308 MSFT 00000097)
ACPI: SSDT 0x00000000CFE9F9F0 000DA4 (v01 A M I  POWERNOW 00000001 AMD  00000001)
ACPI: 2 ACPI AML tables successfully acquired and loaded
ioapic0 at mainbus0 apid 6: pa 0xfec00000, version 0x21, 24 pins
cpu0 at mainbus0 apid 0
cpu0: AMD Phenom(tm) II X6 1075T Processor, id 0x100fa0
cpu0: node 0, package 0, core 0, smt 0
cpu1 at mainbus0 apid 1
cpu1: AMD Phenom(tm) II X6 1075T Processor, id 0x100fa0
cpu1: node 0, package 0, core 1, smt 0
cpu2 at mainbus0 apid 2
cpu2: AMD Phenom(tm) II X6 1075T Processor, id 0x100fa0
cpu2: node 0, package 0, core 2, smt 0
cpu3 at mainbus0 apid 3
cpu3: AMD Phenom(tm) II X6 1075T Processor, id 0x100fa0
cpu3: node 0, package 0, core 3, smt 0
cpu4 at mainbus0 apid 4
cpu4: AMD Phenom(tm) II X6 1075T Processor, id 0x100fa0
cpu4: node 0, package 0, core 4, smt 0
cpu5 at mainbus0 apid 5
cpu5: AMD Phenom(tm) II X6 1075T Processor, id 0x100fa0
cpu5: node 0, package 0, core 5, smt 0
acpi0 at mainbus0: Intel ACPICA 20191213
acpi0: X/RSDT: OemId <030811,XSDT1042,20110308>, AslId <MSFT,00000097>
acpi0: MCFG: segment 0, bus 0-255, address 0x00000000e0000000
acpi0: SCI interrupting at int 9
acpi0: fixed power button present
timecounter: Timecounter "ACPI-Fast" frequency 3579545 Hz quality 1000
hpet0 at acpi0: high precision event timer (mem 0xfed00000-0xfed00400)
timecounter: Timecounter "hpet0" frequency 14318180 Hz quality 2000
acpiec0 at acpi0 (EC0, PNP0C09): io 0x62,0x66
attimer1 at acpi0 (TMR, PNP0100): io 0x40-0x43 irq 0
pcppi1 at acpi0 (SPKR, PNP0800): io 0x61
spkr0 at pcppi1: PC Speaker
wsbell at spkr0 not configured
midi0 at pcppi1: PC speaker
sysbeep0 at pcppi1
com0 at acpi0 (UAR1, PNP0501-1): io 0x3f8-0x3ff irq 4
com0: ns16550a, working fifo
com0: console
aibs0 at acpi0 (ASOC, ATK0110-16843024): ASUSTeK AI Booster
OMSC (PNP0C02) at acpi0 not configured
RMSC (PNP0C02) at acpi0 not configured
SIOR (PNP0C02) at acpi0 not configured
PCIE (PNP0C02) at acpi0 not configured
RMEM (PNP0C01) at acpi0 not configured
acpibut0 at acpi0 (PWRB, PNP0C0C-170): ACPI Power Button
acpiwmi0 at acpi0 (AOD, PNP0C14-0): ACPI WMI Interface
acpiwmibus at acpiwmi0 not configured
attimer1: attached to pcppi1
pci0 at mainbus0 bus 0: configuration mode 1
pci0: i/o space, memory space enabled, rd/line, rd/mult, wr/inv ok
pchb0 at pci0 dev 0 function 0: ATI Technologies RX780/RX790 Chipset Host Bridge (rev. 0x00)
ppb0 at pci0 dev 2 function 0: ATI Technologies RD790 PCI Bridge GFX0 Port A (rev. 0x00)
ppb0: PCI Express capability version 2 <Root Port of PCI-E Root Complex> x16 @ 5.0GT/s
ppb0: link is x16 @ 2.5GT/s
pci1 at ppb0 bus 6
pci1: i/o space, memory space enabled, rd/line, wr/inv ok
nouveau0 at pci1 dev 0 function 0: NVIDIA product 0e22 (rev. 0xa1)
hdaudio0 at pci1 dev 0 function 1: HD Audio Controller
hdaudio0: interrupting at ioapic0 pin 19
hdaudio0: HDA ver. 1.0, OSS 2, ISS 4, BSS 0, SDO 2, 64-bit
hdafg0 at hdaudio0: vendor 10de product 0012
hdafg0: DP00 8ch: Digital Out [Jack]
hdafg0: 8ch/0ch 48000Hz PCM16*
hdafg1 at hdaudio0: vendor 10de product 0012
hdafg1: DP00 8ch: Digital Out [Jack]
hdafg1: 8ch/0ch 48000Hz PCM16*
hdafg2 at hdaudio0: vendor 10de product 0012
hdafg2: DP00 8ch: Digital Out [Jack]
hdafg2: 8ch/0ch 48000Hz PCM16*
hdafg3 at hdaudio0: vendor 10de product 0012
hdafg3: DP00 8ch: Digital Out [Jack]
hdafg3: 8ch/0ch 48000Hz PCM16*
ppb1 at pci0 dev 4 function 0: ATI Technologies RD790 PCI Express Bridge GPP Port A (rev. 0x00)
ppb1: PCI Express capability version 2 <Root Port of PCI-E Root Complex> x4 @ 5.0GT/s
pci2 at ppb1 bus 5
pci2: i/o space, memory space enabled, rd/line, wr/inv ok
nvme0 at pci2 dev 0 function 0: Samsung Electronics (3rd vendor ID) SM951 M.2 NVMe SSD (rev. 0x01)
nvme0: NVMe 1.1
nvme0: interrupting at ioapic0 pin 16
nvme0: SAMSUNG MZVPV256HDGL-00000, firmware BXW7300Q, serial S1XWNYAH408386
ld0 at nvme0 nsid 1
ld0: 238 GB, 31130 cyl, 255 head, 63 sec, 512 bytes/sect x 500118192 sectors
ppb2 at pci0 dev 9 function 0: ATI Technologies RD790 PCI Express Bridge GPP Port E (rev. 0x00)
ppb2: PCI Express capability version 2 <Root Port of PCI-E Root Complex> x2 @ 5.0GT/s
ppb2: link is x1 @ 2.5GT/s
pci3 at ppb2 bus 4
pci3: i/o space, memory space enabled, rd/line, wr/inv ok
jmide0 at pci3 dev 0 function 0: JMicron Technology JMB361 SATA/PATA Controller (rev. 0x10)
jmide0: 1 PATA port, 1 SATA port
jmide0: interrupting at ioapic0 pin 17
ahcisata0 at jmide0
ahcisata0: AHCI revision 1.10, 1 port, 32 slots, CAP 0xc722ff00<PSC,SSC,PMD,SPM,ISS=0x2=Gen2,SCLO,SAL,SALP,SNCQ,S64A>
atabus0 at ahcisata0 channel 0
jmide0: PCI IDE interface used
jmide0: bus-master DMA support present
jmide0: primary channel wired to native-PCI mode
jmide0: primary channel is unused
jmide0: secondary channel wired to native-PCI mode
jmide0: secondary channel is PATA
atabus1 at jmide0 channel 1
ppb3 at pci0 dev 10 function 0: ATI Technologies RD790 PCI Express Bridge GPP Port F (rev. 0x00)
ppb3: PCI Express capability version 2 <Root Port of PCI-E Root Complex> x2 @ 5.0GT/s
ppb3: link is x1 @ 5.0GT/s
pci4 at ppb3 bus 3
pci4: i/o space, memory space enabled, rd/line, wr/inv ok
xhci0 at pci4 dev 0 function 0: NEC Renesas Electronics USB 3.0 Host Controller (rev. 0x03)
xhci0: interrupting at ioapic0 pin 18
xhci0: xHCI version 0.96
usb0 at xhci0: USB revision 3.0
usb1 at xhci0: USB revision 2.0
ahcisata1 at pci0 dev 17 function 0: ATI Technologies SB700-SB900 SATA Controller (AHCI mode) (rev. 0x40)
ahcisata1: 64-bit DMA
ahcisata1: ignoring broken port multiplier support
ahcisata1: ignoring broken NCQ support
ahcisata1: AHCI revision 1.20, 6 ports, 32 slots, CAP 0xb730ff05<PSC,SSC,PMD,ISS=0x3=Gen3,SCLO,SAL,SALP,SMPS,SSNTF,S64A>
ahcisata1: interrupting at ioapic0 pin 19
atabus2 at ahcisata1 channel 0
atabus3 at ahcisata1 channel 1
atabus4 at ahcisata1 channel 2
atabus5 at ahcisata1 channel 3
atabus6 at ahcisata1 channel 4
atabus7 at ahcisata1 channel 5
ohci0 at pci0 dev 18 function 0: ATI Technologies SB700-SB900 USB OHCI Controller (rev. 0x00)
ohci0: interrupting at ioapic0 pin 18
ohci0: OHCI version 1.0, legacy support
usb2 at ohci0: USB revision 1.0
ehci0 at pci0 dev 18 function 2: ATI Technologies SB700-SB900 USB EHCI Controller (rev. 0x00)
ehci0: interrupting at ioapic0 pin 17
ehci0: dropped intr workaround enabled
ehci0: EHCI version 1.0
ehci0: 1 companion controller, 5 ports: ohci0
usb3 at ehci0: USB revision 2.0
ohci1 at pci0 dev 19 function 0: ATI Technologies SB700-SB900 USB OHCI Controller (rev. 0x00)
ohci1: interrupting at ioapic0 pin 18
ohci1: OHCI version 1.0, legacy support
usb4 at ohci1: USB revision 1.0
ehci1 at pci0 dev 19 function 2: ATI Technologies SB700-SB900 USB EHCI Controller (rev. 0x00)
ehci1: interrupting at ioapic0 pin 17
ehci1: dropped intr workaround enabled
ehci1: EHCI version 1.0
ehci1: 1 companion controller, 5 ports: ohci1
usb5 at ehci1: USB revision 2.0
piixpm0 at pci0 dev 20 function 0: ATI Technologies SBx00 SMBus Controller (rev. 0x42)
piixpm0: interrupting at SMI, 
iic0 at piixpm0 port 0: I2C bus
iic1 at piixpm0 port 1: I2C bus
iic2 at piixpm0 port 2: I2C bus
iic3 at piixpm0 port 3: I2C bus
hdaudio1 at pci0 dev 20 function 2: HD Audio Controller
hdaudio1: interrupting at ioapic0 pin 16
hdaudio1: HDA ver. 1.0, OSS 4, ISS 4, BSS 0, SDO 1, 64-bit
hdafg4 at hdaudio1: vendor 1106 product 0440
hdafg4: DAC00 8ch: Speaker [Jack], HP Out [Jack]
hdafg4: ADC01 2ch: Line In [Jack], Mic In [Jack]
hdafg4: HDMI02 2ch: Digital Out [Jack]
hdafg4: DIG03 2ch: SPDIF Out [Jack]
hdafg4: 8ch/2ch 48000Hz PCM16*
audio0 at hdafg4: playback, capture, full duplex, independent
audio0: slinear_le:16 8ch 48000Hz, blk 4ms for playback
audio0: slinear_le:16 2ch 48000Hz, blk 4ms for recording
spkr1 at audio0: PC Speaker (synthesized)
wsbell at spkr1 not configured
pcib0 at pci0 dev 20 function 3: ATI Technologies SB700-SB900 LPC Host Controller (rev. 0x40)
ppb4 at pci0 dev 20 function 4: ATI Technologies SBx00 PCI to PCI Bridge (rev. 0x40)
pci5 at ppb4 bus 2
pci5: i/o space, memory space enabled
fwohci0 at pci5 dev 8 function 0: VIA Technologies VT6306 IEEE 1394 Host Controller (rev. 0xc0)
fwohci0: interrupting at ioapic0 pin 20
fwohci0: OHCI version 1.10 (ROM=1)
fwohci0: No. of Isochronous channels is 4.
fwohci0: EUI64 00:1f:c6:00:00:0a:ca:1a
fwohci0: Phy 1394a available S400, 2 ports.
fwohci0: Link S400, max_rec 2048 bytes.
ieee1394if0 at fwohci0: IEEE1394 bus
fwip0 at ieee1394if0: IP over IEEE1394
fwohci0: Initiate bus reset
ohci2 at pci0 dev 20 function 5: ATI Technologies SB700-SB900 USB OHCI Controller (rev. 0x00)
ohci2: interrupting at ioapic0 pin 18
ohci2: OHCI version 1.0, legacy support
usb6 at ohci2: USB revision 1.0
ppb5 at pci0 dev 21 function 0: ATI Technologies SB700-SB900 PCI to PCI bridge (PCIe 0) (rev. 0x00)
ppb5: PCI Express capability version 2 <Root Port of PCI-E Root Complex> x1 @ 5.0GT/s
ppb5: link is x1 @ 2.5GT/s
pci6 at ppb5 bus 1
pci6: i/o space, memory space enabled, rd/line, wr/inv ok
re0 at pci6 dev 0 function 0: RealTek 8168/8111 PCIe Gigabit Ethernet (rev. 0x06)
re0: interrupting at ioapic0 pin 16
re0: Ethernet address bc:ae:c5:46:16:58
re0: using 256 tx descriptors
rgephy0 at re0 phy 7: RTL8211D 1000BASE-T media interface
rgephy0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, 1000baseT, 1000baseT-FDX, auto
ohci3 at pci0 dev 22 function 0: ATI Technologies SB700-SB900 USB OHCI Controller (rev. 0x00)
ohci3: interrupting at ioapic0 pin 18
ohci3: OHCI version 1.0, legacy support
usb7 at ohci3: USB revision 1.0
ehci2 at pci0 dev 22 function 2: ATI Technologies SB700-SB900 USB EHCI Controller (rev. 0x00)
ehci2: interrupting at ioapic0 pin 17
ehci2: dropped intr workaround enabled
ehci2: EHCI version 1.0
ehci2: 1 companion controller, 4 ports: ohci3
usb8 at ehci2: USB revision 2.0
pchb1 at pci0 dev 24 function 0: AMD AMD64 Family10h HyperTransport Configuration (rev. 0x00)
pchb2 at pci0 dev 24 function 1: AMD AMD64 Family10h Address Map Configuration (rev. 0x00)
pchb3 at pci0 dev 24 function 2: AMD AMD64 Family10h DRAM Configuration (rev. 0x00)
amdnb_misc0 at pci0 dev 24 function 3: AMD NB Misc Configuration
amdtemp0 at amdnb_misc0: AMD CPU Temperature Sensors (Family10h)
pchb4 at pci0 dev 24 function 4: AMD AMD64 Family10h Link Configuration (rev. 0x00)
isa0 at pcib0
pckbc0 at isa0 port 0x60-0x64
acpicpu0 at cpu0: ACPI CPU
acpicpu0: C1: HLT, lat   0 us, pow     0 mW
acpicpu0: C2: I/O, lat  75 us, pow     1 mW
acpicpu0: P0: FFH, lat   4 us, pow 19507 mW, 3000 MHz
acpicpu0: P1: FFH, lat   4 us, pow 14500 mW, 2300 MHz
acpicpu0: P2: FFH, lat   4 us, pow 10535 mW, 1600 MHz
acpicpu0: P3: FFH, lat   4 us, pow  6210 mW,  800 MHz
acpicpu0: T0: I/O, lat   1 us, pow     0 mW, 100 %
acpicpu0: T1: I/O, lat   1 us, pow     0 mW,  88 %
acpicpu0: T2: I/O, lat   1 us, pow     0 mW,  76 %
acpicpu0: T3: I/O, lat   1 us, pow     0 mW,  64 %
acpicpu0: T4: I/O, lat   1 us, pow     0 mW,  52 %
acpicpu0: T5: I/O, lat   1 us, pow     0 mW,  40 %
acpicpu0: T6: I/O, lat   1 us, pow     0 mW,  28 %
acpicpu0: T7: I/O, lat   1 us, pow     0 mW,  16 %
acpicpu1 at cpu1: ACPI CPU
acpicpu2 at cpu2: ACPI CPU
acpicpu3 at cpu3: ACPI CPU
acpicpu4 at cpu4: ACPI CPU
acpicpu5 at cpu5: ACPI CPU
fwohci0: BUS reset
fwohci0: node_id=0xc800ffc0, gen=1, CYCLEMASTER mode
ieee1394if0: 1 nodes, maxhop <= 0 cable IRM irm(0) (me)
ieee1394if0: bus manager 0
timecounter: Timecounter "clockinterrupt" frequency 100 Hz quality 0
timecounter: Timecounter "TSC" frequency 3010173780 Hz quality 3000
uhub0 at usb0: NetBSD (0000) xHCI root hub (0000), class 9/0, rev 3.00/1.00, addr 0
uhub0: 2 ports with 2 removable, self powered
uhub1 at usb1: NetBSD (0000) xHCI root hub (0000), class 9/0, rev 2.00/1.00, addr 0
uhub1: 2 ports with 2 removable, self powered
IPsec: Initialized Security Association Processing.
uhub2 at usb2: NetBSD (0000) OHCI root hub (0000), class 9/0, rev 1.00/1.00, addr 1
uhub2: 5 ports with 5 removable, self powered
uhub3 at usb5: NetBSD (0000) EHCI root hub (0000), class 9/0, rev 2.00/1.00, addr 1
uhub3: 5 ports with 5 removable, self powered
uhub4 at usb3: NetBSD (0000) EHCI root hub (0000), class 9/0, rev 2.00/1.00, addr 1
uhub4: 5 ports with 5 removable, self powered
uhub5 at usb6: NetBSD (0000) OHCI root hub (0000), class 9/0, rev 1.00/1.00, addr 1
uhub5: 2 ports with 2 removable, self powered
uhub6 at usb4: NetBSD (0000) OHCI root hub (0000), class 9/0, rev 1.00/1.00, addr 1
uhub6: 5 ports with 5 removable, self powered
uhub7 at usb7: NetBSD (0000) OHCI root hub (0000), class 9/0, rev 1.00/1.00, addr 1
uhub7: 4 ports with 4 removable, self powered
uhub8 at usb8: NetBSD (0000) EHCI root hub (0000), class 9/0, rev 2.00/1.00, addr 1
uhub8: 4 ports with 4 removable, self powered
ahcisata1 port 2: device present, speed: 1.5Gb/s
ahcisata1 port 0: device present, speed: 6.0Gb/s
ehci1: handing over full speed device on port 1 to ohci1
wd0 at atabus2 drive 0
wd0: <ST2000DL003-9VT166>
wd0: drive supports 16-sector PIO transfers, LBA48 addressing
wd0: 1863 GB, 3876021 cyl, 16 head, 63 sec, 512 bytes/sect x 3907029168 sectors
wd0: drive supports PIO mode 4, DMA mode 2, Ultra-DMA mode 6 (Ultra/133), WRITE DMA FUA, NCQ (32 tags)
wd0(ahcisata1:0:0): using PIO mode 4, DMA mode 2, Ultra-DMA mode 6 (Ultra/133) (using DMA), WRITE DMA FUA EXT
atapibus0 at atabus4: 1 targets
cd0 at atapibus0 drive 0: <HL-DT-ST BD-RE  BH10LS38, K89C2CJ1805, 1.03> cdrom removable
cd0: drive supports PIO mode 4, DMA mode 2, Ultra-DMA mode 6 (Ultra/133)
cd0(ahcisata1:2:0): using PIO mode 4, DMA mode 2, Ultra-DMA mode 6 (Ultra/133) (using DMA)
uplcom0 at uhub6 port 1
uplcom0: Prolific Technology Inc. (0x67b) USB-Serial Controller (0x2303), rev 1.10/3.00, addr 2
ucom0 at uplcom0
ugen0 at uhub3 port 2
ugen0: Realtek (0x2357) 802.11ac WLAN Adapter (0x11e), rev 2.10/2.00, addr 2
boot device: wd0
root on wd0e dumps on wd0b
root file system type: ffs
kern.module.path=/stand/amd64/9.99.49/modules
nouveau0: interrupting at ioapic0 pin 18 (nouveau0)
Zone  kernel: Available graphics memory: 5381902 kiB
Zone   dma32: Available graphics memory: 2097152 kiB
nouveau0: info: DRM: VRAM: 1024 MiB
nouveau0: info: DRM: GART: 1048576 MiB
nouveau0: info: DRM: TMDS table version 2.0
nouveau0: info: DRM: DCB version 4.0
nouveau0: info: DRM: DCB outp 00: 02000300 00000000
nouveau0: info: DRM: DCB outp 01: 01000302 00020030
nouveau0: info: DRM: DCB outp 02: 04011380 00000000
nouveau0: info: DRM: DCB outp 03: 08011382 00020030
nouveau0: info: DRM: DCB outp 04: 02022362 00020010
nouveau0: info: DRM: DCB conn 00: 00001030
nouveau0: info: DRM: DCB conn 01: 00010130
nouveau0: info: DRM: DCB conn 02: 00002261
kern info: [drm] Supports vblank timestamp caching Rev 2 (21.10.2013).
kern info: [drm] Driver supports precise vblank timestamp query.
nouveau0: info: DRM: MM: using COPY1 for buffer copies
nouveau0: info: No connectors reported connected with modes
kern info: [drm] Cannot find any crtc or sizes - going 1024x768
nouveaufb0 at nouveau0
nouveaufb0: framebuffer at 0xffff8b015021b000, size 1024x768, depth 32, stride 4096
wsdisplay0 at nouveaufb0 kbdmux 1
wsmux1: connecting to wsdisplay0
aibs0: warning over limit on 'CPU Temperature'
aibs0: warning under limit on 'Chassis Fan Speed'
aibs0: warning under limit on 'Power Fan Speed'
wsdisplay0: screen 0 added (default, vt100 emulation)
wsdisplay0: screen 1 added (default, vt100 emulation)
wsdisplay0: screen 2 added (default, vt100 emulation)
wsdisplay0: screen 3 added (default, vt100 emulation)
wsdisplay0: screen 4 added (default, vt100 emulation)


>How-To-Repeat:
boot current on this machine ;-)

>Fix:
n/a

>Release-Note:

>Audit-Trail:
From: Jason Thorpe <thorpej@me.com>
To: Martin Husemann <martin@netbsd.org>
Cc: netbsd-bugs@netbsd.org,
 gnats-bugs@netbsd.org
Subject: Re: kern/55080: current does not boot
Date: Tue, 17 Mar 2020 10:53:46 -0700

 > On Mar 17, 2020, at 10:25 AM, martin@netbsd.org <martin@NetBSD.org> =
 wrote:
 >=20
 > The last line or sometimes two last lines do not show up with =
 -current.
 > Can break into ddb, all cpus in the idle loop.

 Can you see about getting stack traces for any blocked threads, =
 especially any that look like they're waiting for a mutex?

 -- thorpej

From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@NetBSD.org
Cc: ad@NetBSD.org
Subject: Re: kern/55080: current does not boot
Date: Wed, 18 Mar 2020 21:24:37 +0100

 It is caused by this commit:

 Module Name:    src
 Committed By:   ad 
 Date:           Sat Mar 14 13:50:46 UTC 2020

 Modified Files: 
         src/sys/arch/x86/acpi: acpi_cpu_md.c

 Log Message:
 Put ACPI idle under ACPICPU_ENABLE_C3 until the wrinkles are ironed out.
 This seems well written and basically all good, but currently doesn't enter
 a low power state, and imposes a big performance penalty.  Proposed on 
 port-i386 & port-amd64.


 To generate a diff of this commit:
 cvs rdiff -u -r1.81 -r1.82 src/sys/arch/x86/acpi/acpi_cpu_md.c

Responsible-Changed-From-To: kern-bug-people->ad
Responsible-Changed-By: ad@NetBSD.org
Responsible-Changed-When: Thu, 19 Mar 2020 19:58:02 +0000
Responsible-Changed-Why:
Offending change backed out.  Will address the idle issue differently.


State-Changed-From-To: open->feedback
State-Changed-By: ad@NetBSD.org
State-Changed-When: Thu, 19 Mar 2020 19:58:02 +0000
State-Changed-Why:
Changed


From: "Andrew Doran" <ad@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55080 CVS commit: src/sys/arch/x86/acpi
Date: Thu, 19 Mar 2020 19:55:34 +0000

 Module Name:	src
 Committed By:	ad
 Date:		Thu Mar 19 19:55:34 UTC 2020

 Modified Files:
 	src/sys/arch/x86/acpi: acpi_cpu_md.c

 Log Message:
 PR kern/55080: current does not boot

 Back out previous.  To be addressed differently.


 To generate a diff of this commit:
 cvs rdiff -u -r1.82 -r1.83 src/sys/arch/x86/acpi/acpi_cpu_md.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: feedback->closed
State-Changed-By: ad@NetBSD.org
State-Changed-When: Thu, 11 Jun 2020 18:56:23 +0000
State-Changed-Why:
This is fixed, and the ACPI thing resolved differently.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.