PR kern/55080: current does not boot

Back out previous.  To be addressed differently.